examples/errors/duplicate_class_method.ik
type SizedA class:
    fn size(Self) Int

type SizedB class:
    fn size(Self) Int

fn main():
    print("Hello\n")
